--- a/src/css/var/_size.scss
+++ b/src/css/var/_size.scss
@@ -43,12 +43,13 @@ $breakpoint-fhd-up-width: 1921px;
 $breakpoint-fhd-up-height: 1081px;
 
 // Core
-$margin-top-h1: $margin-gargantuan;
-
 $width-border-blockquote: $width-border-large;
 $padding-left-blockquote: ($indent - $width-border-blockquote);
 
 $width-border-table: $width-border-small;
+
+// Content
+$margin-top-section-heading: $margin-gargantuan;
 
 // Subcontent
 $width-border-site-search-query: $width-border-small;
