--- a/src/css/widget/_hang.scss
+++ b/src/css/widget/_hang.scss
@@ -23,6 +23,6 @@ h1.hang {
 
 .section > h1.hang:first-child + * {
   @media (min-width: $breakpoint-full) {
-    margin-top: $margin-top-h1;
+    margin-top: $margin-top-section-heading;
   }
 }
