--- a/src/html/about/index.mustache
+++ b/src/html/about/index.mustache
@@ -14,14 +14,14 @@
         <p>時々長期にわたって更新が止まりますが、そういう時はほぼ何かしらのゲームにはまってる時です。</p>
 
         <section>
-          <h1 class="subheading">購読</h1>
+          <h1>購読</h1>
 
           <p>このウェブサイトの更新情報は、<a href="/feed" rel="alternate" type="application/rss+xml">RSSフィード</a>で配信しています。このフィードにはウェブサイト全体の更新情報だけでなく、ウェブログの記事も含まれます。</li>
           </ul>
         </section>
 
         <section>
-          <h1 class="subheading">ライセンス</h1>
+          <h1>ライセンス</h1>
 
           <figure class="fill">
             <a href="{{license_url}}" rel="license"><img alt="Creative Commons — Attribution" height="1440" src="/images/about/cc-by.svg" width="2560"></a>
@@ -38,7 +38,7 @@
         <p>その他、ウェブページの構成やツール、プライバシーについては以下を参照してください。</p>
 
         <section>
-          <h1 class="subheading">製作に使っているツール</h1>
+          <h1>製作に使っているツール</h1>
 
           <ul class="flat">
             <li><a href="http://blosxom.sourceforge.net/">Blosxom</a></li>
@@ -63,7 +63,7 @@
         </section>
 
         <section>
-          <h1 class="subheading">ウェブサイト上で使っているツール</h1>
+          <h1>ウェブサイト上で使っているツール</h1>
 
           <ul class="flat">
             <li><a href="https://github.com/hail2u/abbread">Abbread</a></li>
@@ -75,7 +75,7 @@
         </section>
 
         <section>
-          <h1 class="subheading">利用しているサービス</h1>
+          <h1>利用しているサービス</h1>
 
           <ul class="flat">
             <li><a href="https://www.cloudflare.com/">CloudFlare</a></li>
@@ -86,7 +86,7 @@
         </section>
 
         <section>
-          <h1 class="subheading">マークアップとスタイルシート</h1>
+          <h1>マークアップとスタイルシート</h1>
 
           <p>マークアップは<a href="https://html.spec.whatwg.org/multipage/">HTML Standard</a>に従って行っています。スタイルシートはSassで書き、CSSへ変換しています。両者のより詳細な解説とプレビューとして<a href="/about/style-guide/">スタイル・ガイド</a>を用意してあるので、そちらも参照してください。</p>
         </section>
