--- a/src/css/_content.scss
+++ b/src/css/_content.scss
@@ -1,12 +1,12 @@
 // Content
 .content {
-  margin: (0 - $margin-top-h1 + $margin-large) auto $margin-gargantuan;
+  margin: (0 - $margin-top-section-heading + $margin-large) auto $margin-gargantuan;
   max-width: $width-content;
   padding-left: $width-gap-small;
   padding-right: $width-gap-small;
 
   @media (min-width: $breakpoint-content) {
-    margin-top: (0 - $margin-top-h1 + $margin-huge);
+    margin-top: (0 - $margin-top-section-heading + $margin-huge);
   }
 
   @media (min-width: $breakpoint-full) {
