--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -31,7 +31,7 @@ h1 {
   font-size: ($ratio-text-h1 * 1rem);
   font-weight: 400;
   line-height: $line-height-h1;
-  margin: $margin-top-h1 0 $margin;
+  margin: 0 0 $margin;
 }
 
 // Grouping Content
