--- a/src/css/content/_section.scss
+++ b/src/css/content/_section.scss
@@ -2,3 +2,13 @@
 .section {
   position: relative;
 }
+
+.section > h1 {
+  margin-top: $margin-top-section-heading;
+}
+
+.section * h1 {
+  font-size: ($ratio-text-large * 1rem);
+  margin-bottom: $margin-minimal;
+  margin-top: $margin-huge;
+}
