Remove Section Footer

--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -14,7 +14,7 @@
 
 <!-- blosxom story -->
       <article class="section">
-        <footer class="section-footer">
+        <footer>
           <p><time class="js-reldate" datetime="$yr-$mo_num-$da<?$fn>T</?>$ti<?$fn>:</?>00+09:00">$yr/$mo_num/$da</time></p>
         </footer>
 
