--- a/src/css/content/_section.scss
+++ b/src/css/content/_section.scss
@@ -3,6 +3,26 @@
   position: relative;
 }
 
+.section > footer:first-child {
+  color: $color-fg-light;
+  float: left;
+  font-size: ($ratio-text-section-footer * 1rem);
+  width: 100%;
+
+  @media (min-width: $breakpoint-full) {
+    line-height: ($line-height-h1 * $ratio-text-h1 / $ratio-text-section-footer);
+    margin-right: $width-gap;
+    position: absolute;
+    right: 100%;
+    width: $width-supplement;
+    z-index: 1;
+  }
+}
+
+.section > footer:first-child p {
+  margin-bottom: 0;
+}
+
 .section > h1 {
   margin-top: $margin-top-section-heading;
 }
