Remove unnecessary/verbose classes

--- a/src/css/subcontent/_site-search.scss
+++ b/src/css/subcontent/_site-search.scss
@@ -20,7 +20,7 @@
   line-height: $height-site-search-query;
 }
 
-.site-search .query {
+.site-search [name="q"] {
   background-color: white;
   border: $width-border-site-search-query solid $color-bg-dark;
   box-sizing: border-box;
@@ -29,12 +29,12 @@
   width: 100%;
 }
 
-.site-search .query:focus {
+.site-search [name="q"]:focus {
   border-color: $color-accent;
   outline: none;
 }
 
-.site-search .button {
+.site-search button {
   background-color: transparent;
   border: 0;
   box-sizing: border-box;
@@ -46,11 +46,11 @@
   width: $height-site-search-query;
 }
 
-.site-search .button svg {
+.site-search button svg {
   height: 65%;
   width: auto;
 }
 
-.site-search .button path {
+.site-search button path {
   fill: $color-fg-light;
 }
