--- a/src/css/widget/_posts.scss
+++ b/src/css/widget/_posts.scss
@@ -16,11 +16,7 @@
   }
 }
 
-.posts a {
-  text-decoration: none;
-}
-
-.posts .info {
+.posts div {
   color: $color-fg-light;
   font-size: ($ratio-text-posts-info * 1rem);
 
@@ -31,7 +27,9 @@
   }
 }
 
-.posts .title {
+.posts a {
+  text-decoration: none;
+
   @media (min-width: $breakpoint-content) {
     display: block;
     flex-basis: 0;
