--- a/src/css/widget/_share.scss
+++ b/src/css/widget/_share.scss
@@ -20,10 +20,10 @@
   fill: $color-fg;
 }
 
-.facebook svg {
-  height: ($height-share-icon * 0.88);
+.share [href^="https://plus.google.com"] svg {
+  height: ($height-share-icon * 1.24);
 }
 
-.google svg {
-  height: ($height-share-icon * 1.24);
+.share [href^="https://www.facebook.com/"] svg {
+  height: ($height-share-icon * 0.88);
 }
