Split Section Footer, Heading, and Subheading

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -21,6 +21,9 @@
 // Content
 @import "content";
 @import "content/section";
+@import "content/section-footer";
+@import "content/section-heading";
+@import "content/section-subheading";
 
 // Subcontent
 @import "subcontent";
