Remove class from global elements

--- a/src/css/_global-header.scss
+++ b/src/css/_global-header.scss
@@ -1,5 +1,5 @@
 // Global Header
-.global-header {
+[role="banner"] {
   display: flex;
   flex-flow: row wrap;
   margin-left: auto;
@@ -19,6 +19,6 @@
   }
 }
 
-.global-header a {
+[role="banner"] a {
   text-decoration: none;
 }
