--- a/src/css/global-footer/_byline.scss
+++ b/src/css/global-footer/_byline.scss
@@ -1,5 +1,5 @@
 // Byline
-.byline {
+[role="contentinfo"] p:last-child {
   position: relative;
 
   @media (min-width: $breakpoint-content) {
@@ -16,6 +16,6 @@
   }
 }
 
-.byline a {
+[role="contentinfo"] p:last-child a {
   font-weight: 700;
 }
