--- a/src/css/global-header/_logo.scss
+++ b/src/css/global-header/_logo.scss
@@ -1,5 +1,5 @@
 // Logo
-.logo {
+[role="banner"] h1 {
   flex: auto;
   font-size: ($ratio-text-logo * 1rem);
   font-weight: 900;
@@ -19,7 +19,7 @@
   }
 }
 
-.logo svg {
+[role="banner"] h1 svg {
   height: ($ratio-text-logo * $line-height-root * 1rem);
   width: auto;
 
@@ -28,6 +28,6 @@
   }
 }
 
-.logo path {
+[role="banner"] h1 path {
   fill: $color-fg;
 }
