--- a/src/css/global-header/_site-navigation.scss
+++ b/src/css/global-header/_site-navigation.scss
@@ -1,11 +1,11 @@
 // Site Navigation
-.site-navigation ul {
+[role="banner"] nav ul {
   display: flex;
   margin-bottom: 0;
   padding-left: 0;
 }
 
-.site-navigation li {
+[role="banner"] nav li {
   display: block;
   font-size: ($ratio-text-logo * 1rem);
   margin-left: $width-gap-small;
@@ -16,17 +16,17 @@
   }
 }
 
-.site-navigation a {
+[role="banner"] nav a {
   color: inherit;
 }
 
-.site-navigation mark {
+[role="banner"] nav mark {
   background-color: transparent;
   display: block;
   position: relative;
 }
 
-.site-navigation mark::after {
+[role="banner"] nav mark::after {
   border: $width-border-small solid $color-accent;
   content: "";
   display: block;
