--- a/src/html/about/index.mustache
+++ b/src/html/about/index.mustache
@@ -5,7 +5,7 @@
   <body>
     {{> global-header}}
 
-    <main class="content">
+    <main role="main">
       <section id="website" class="section">
         <h1 class="hang">{{short_title}}</h1>
 
