--- a/src/html/blog/index.mustache
+++ b/src/html/blog/index.mustache
@@ -5,7 +5,7 @@
   <body>
     {{> global-header}}
 
-    <main class="content">
+    <main role="main">
       {{#articles}}
         {{#isFirstInYear}}
           <section id="on-{{year}}" class="section">
@@ -15,8 +15,8 @@
         {{/isFirstInYear}}
 
         <li>
-          <div class="info"><time datetime="{{html5PubDate}}">{{strPubDate}}</time></div>
-          <a class="title" href="{{link}}">{{{title}}}</a>
+          <div><time datetime="{{html5PubDate}}">{{strPubDate}}</time></div>
+          <a href="{{link}}">{{{title}}}</a>
         </li>
 
         {{#isLastInYear}}
