--- a/src/html/documents/index.mustache
+++ b/src/html/documents/index.mustache
@@ -5,12 +5,12 @@
   <body>
     {{> global-header}}
 
-    <main class="content">
+    <main role="main">
       <section id="on-2015" class="section">
         <h1 class="hang"><time>2015</time></h1>
 
         <ol class="posts">
-          <li><a class="title" href="/documents/democratic-design.html">民主的なデザイン</a></li>
+          <li><a href="/documents/democratic-design.html">民主的なデザイン</a></li>
         </ol>
       </section>
 
@@ -18,10 +18,10 @@
         <h1 class="hang"><time>2014</time></h1>
 
         <ol class="posts">
-          <li><a class="title" href="/documents/markup.html">“マークアップ”するということ ～ HTML5勧告に寄せて ～</a></li>
-          <li><a class="title" href="/documents/web-typography-best-practices.html">ウェブ・タイポグラフィーのベスト・プラクティス</a></li>
-          <li><a class="title" href="/documents/bulletproof-icon-fonts.html">安全でアクセシブルなアイコン・フォント</a></li>
-          <li><a class="title" href="/documents/sass-guide-ja.html">Sassの基本</a></li>
+          <li><a href="/documents/markup.html">“マークアップ”するということ ～ HTML5勧告に寄せて ～</a></li>
+          <li><a href="/documents/web-typography-best-practices.html">ウェブ・タイポグラフィーのベスト・プラクティス</a></li>
+          <li><a href="/documents/bulletproof-icon-fonts.html">安全でアクセシブルなアイコン・フォント</a></li>
+          <li><a href="/documents/sass-guide-ja.html">Sassの基本</a></li>
         </ol>
       </section>
 
@@ -29,13 +29,13 @@
         <h1 class="hang"><time>2013</time></h1>
 
         <ol class="posts">
-          <li><a class="title" href="/documents/css-postprocessor-era.html">CSSポストプロセッサー時代の到来</a></li>
-          <li><a class="title" href="/documents/cutting-down-on-vendor-prefixes.html">ベンダー拡張プリフィックスヲ削減セヨ</a></li>
-          <li><a class="title" href="/documents/think-of-the-beginners.html">初心者のことを考えよう</a></li>
-          <li><a class="title" href="/documents/favicon-cheat-sheet-ja.html">ファビコン・カンニング・ペーパー</a></li>
-          <li><a class="title" href="/documents/what-should-you-say-when-your-app-goes-down.html">あなたのサービスが落ちた時にユーザーになんと言うべきでしょうか？</a></li>
-          <li><a class="title" href="/documents/html-img-alt.html">HTMLにおけるimg要素のalt属性</a></li>
-          <li><a class="title" href="/documents/translation-is-easy-really.html">翻訳は簡単だよ、本当に</a></li>
+          <li><a href="/documents/css-postprocessor-era.html">CSSポストプロセッサー時代の到来</a></li>
+          <li><a href="/documents/cutting-down-on-vendor-prefixes.html">ベンダー拡張プリフィックスヲ削減セヨ</a></li>
+          <li><a href="/documents/think-of-the-beginners.html">初心者のことを考えよう</a></li>
+          <li><a href="/documents/favicon-cheat-sheet-ja.html">ファビコン・カンニング・ペーパー</a></li>
+          <li><a href="/documents/what-should-you-say-when-your-app-goes-down.html">あなたのサービスが落ちた時にユーザーになんと言うべきでしょうか？</a></li>
+          <li><a href="/documents/html-img-alt.html">HTMLにおけるimg要素のalt属性</a></li>
+          <li><a href="/documents/translation-is-easy-really.html">翻訳は簡単だよ、本当に</a></li>
         </ol>
       </section>
 
@@ -43,9 +43,9 @@
         <h1 class="hang"><time>2012</time></h1>
 
         <ol class="posts">
-          <li><a class="title" href="/documents/style-repository.html">スタイル・リポジトリ</a></li>
-          <li><a class="title" href="/documents/rdfa-lite-20120607.html">抄訳 RDFa Lite 1.1</a></li>
-          <li><a class="title" href="/documents/learn-you-a-flexbox-for-great-good.html">Flexbox、おもしろいですよ？</a></li>
+          <li><a href="/documents/style-repository.html">スタイル・リポジトリ</a></li>
+          <li><a href="/documents/rdfa-lite-20120607.html">抄訳 RDFa Lite 1.1</a></li>
+          <li><a href="/documents/learn-you-a-flexbox-for-great-good.html">Flexbox、おもしろいですよ？</a></li>
         </ol>
       </section>
 
@@ -53,11 +53,11 @@
         <h1 class="hang"><time>2011</time></h1>
 
         <ol class="posts">
-          <li><a class="title" href="/documents/ala-getting-started-with-sass.html">Sassで行こう！</a></li>
-          <li><a class="title" href="/documents/ala-whitespace.html">余白の美</a></li>
-          <li><a class="title" href="/documents/sass-tutorial.html">Sass - チュートリアル</a></li>
-          <li><a class="title" href="/documents/sass-and-sassy-css.html">Sass、そしてSassy CSS (SCSS)</a></li>
-          <li><a class="title" href="/documents/diveintohtml5-semantics.html">結局どうすればいいの？ - Dive Into HTML5</a></li>
+          <li><a href="/documents/ala-getting-started-with-sass.html">Sassで行こう！</a></li>
+          <li><a href="/documents/ala-whitespace.html">余白の美</a></li>
+          <li><a href="/documents/sass-tutorial.html">Sass - チュートリアル</a></li>
+          <li><a href="/documents/sass-and-sassy-css.html">Sass、そしてSassy CSS (SCSS)</a></li>
+          <li><a href="/documents/diveintohtml5-semantics.html">結局どうすればいいの？ - Dive Into HTML5</a></li>
         </ol>
       </section>
 
@@ -65,9 +65,9 @@
         <h1 class="hang"><time>2009</time></h1>
 
         <ol class="posts">
-          <li><a class="title" href="/documents/adding-meaning-to-your-http-error-pages.html">HTTPエラーページに意味を持たせよう</a></li>
-          <li><a class="title" href="/documents/git-cheat-sheets-jp.html">Git Cheat Sheets JP</a></li>
-          <li><a class="title" href="/documents/version-control-for-designers.html">Version Control for Designers</a></li>
+          <li><a href="/documents/adding-meaning-to-your-http-error-pages.html">HTTPエラーページに意味を持たせよう</a></li>
+          <li><a href="/documents/git-cheat-sheets-jp.html">Git Cheat Sheets JP</a></li>
+          <li><a href="/documents/version-control-for-designers.html">Version Control for Designers</a></li>
         </ol>
       </section>
 
@@ -75,7 +75,7 @@
         <h1 class="hang"><time>2008</time></h1>
 
         <ol class="posts">
-          <li><a class="title" href="/documents/sortable-pokemon-list.html">ソート機能付き ポケモン一覧表</a></li>
+          <li><a href="/documents/sortable-pokemon-list.html">ソート機能付き ポケモン一覧表</a></li>
         </ol>
       </section>
 
@@ -83,19 +83,19 @@
         <h1 class="hang">～ <time>2007</time></h1>
 
         <ol class="posts">
-          <li><a class="title" href="/documents/216colors.html">216 cross platform colors table</a></li>
-          <li><a class="title" href="/documents/about-rss.html">RSSについて</a></li>
-          <li><a class="title" href="/documents/atom02spec.html">Atom 0.2 Spec日本語 HTML 版</a></li>
-          <li><a class="title" href="/documents/cairs.html">Complex @import rules</a></li>
-          <li><a class="title" href="/documents/css2bsi.html">CSS2 browser support information</a></li>
-          <li><a class="title" href="/documents/css2pt.html">CSS2 property table</a></li>
-          <li><a class="title" href="/documents/entities.html">Character entities table</a></li>
-          <li><a class="title" href="/documents/httpstatus.html">HTTP status message list</a></li>
-          <li><a class="title" href="/documents/opjsdom.html">Support for JavaScript and JScript Objects in Opera</a></li>
-          <li><a class="title" href="/documents/opml_spec.html">OPML 1.0 Specificationの勝手な日本語訳</a></li>
-          <li><a class="title" href="/documents/ps_lightning.html">Draw lightning in Photoshop 7</a></li>
-          <li><a class="title" href="/documents/ps_sketchpbyp.html">Sketch photo by pencil in Photoshop 7</a></li>
-          <li><a class="title" href="/documents/rss20notes.html">RSS 2.0 Notes</a></li>
+          <li><a href="/documents/216colors.html">216 cross platform colors table</a></li>
+          <li><a href="/documents/about-rss.html">RSSについて</a></li>
+          <li><a href="/documents/atom02spec.html">Atom 0.2 Spec日本語 HTML 版</a></li>
+          <li><a href="/documents/cairs.html">Complex @import rules</a></li>
+          <li><a href="/documents/css2bsi.html">CSS2 browser support information</a></li>
+          <li><a href="/documents/css2pt.html">CSS2 property table</a></li>
+          <li><a href="/documents/entities.html">Character entities table</a></li>
+          <li><a href="/documents/httpstatus.html">HTTP status message list</a></li>
+          <li><a href="/documents/opjsdom.html">Support for JavaScript and JScript Objects in Opera</a></li>
+          <li><a href="/documents/opml_spec.html">OPML 1.0 Specificationの勝手な日本語訳</a></li>
+          <li><a href="/documents/ps_lightning.html">Draw lightning in Photoshop 7</a></li>
+          <li><a href="/documents/ps_sketchpbyp.html">Sketch photo by pencil in Photoshop 7</a></li>
+          <li><a href="/documents/rss20notes.html">RSS 2.0 Notes</a></li>
         </ol>
       </section>
     </main>
