--- a/src/html/index.mustache
+++ b/src/html/index.mustache
@@ -5,15 +5,15 @@
   <body>
     {{> global-header}}
 
-    <main class="content">
+    <main role="main">
       <section class="section">
         <h1 class="hang">最近書いた記事</h1>
 
         <ol class="posts">
           {{#articles}}
             <li>
-              <div class="info"><time class="js-reldate" datetime="{{html5PubDate}}">{{strPubDate}}</time></div>
-              <a class="title" href="{{link}}">{{{title}}}</a>
+              <div><time class="js-reldate" datetime="{{html5PubDate}}">{{strPubDate}}</time></div>
+              <a href="{{link}}">{{{title}}}</a>
             </li>
           {{/articles}}
         </ol>
