--- a/src/html/partial/global-header.mustache
+++ b/src/html/partial/global-header.mustache
@@ -1,7 +1,7 @@
-<header class="global-header">
-  <h1 class="logo"><a href="https://hail2u.net/"><svg height="272" viewBox="0 0 192 272" width="192" role="img" aria-labelledby="logo-title"><title id="logo-title">{{site_title}}</title><path d="M1 56v160h36v-64h64v64h36V56h-36v64H37V56zm154 124v36h36v-36z"/></svg></a></h1>
+<header role="banner">
+  <h1><a href="https://hail2u.net/"><svg height="272" viewBox="0 0 192 272" width="192" role="img" aria-labelledby="logo-title"><title id="logo-title">{{site_title}}</title><path d="M1 56v160h36v-64h64v64h36V56h-36v64H37V56zm154 124v36h36v-36z"/></svg></a></h1>
 
-  <nav class="site-navigation">
+  <nav>
     <ul>
       {{#documents}}<li><mark>特集</mark></li>{{/documents}}
       {{^documents}}<li><a href="/documents/">特集</a></li>{{/documents}}
