--- a/src/css/subcontent/_site-search.scss
+++ b/src/css/subcontent/_site-search.scss
@@ -1,5 +1,5 @@
 // Site Search
-.site-search {
+[role="search"] {
   position: relative;
 
   @media (min-width: $breakpoint-content) {
@@ -11,7 +11,7 @@
   }
 }
 
-.site-search input {
+[role="search"] input {
   -webkit-appearance: none;
   border-radius: 0;
   font-family: inherit;
@@ -20,7 +20,7 @@
   line-height: $height-site-search-query;
 }
 
-.site-search [name="q"] {
+[role="search"] [name="q"] {
   background-color: white;
   border: $width-border-site-search-query solid $color-bg-dark;
   box-sizing: border-box;
@@ -29,12 +29,12 @@
   width: 100%;
 }
 
-.site-search [name="q"]:focus {
+[role="search"] [name="q"]:focus {
   border-color: $color-accent;
   outline: none;
 }
 
-.site-search button {
+[role="search"] button {
   background-color: transparent;
   border: 0;
   box-sizing: border-box;
@@ -46,11 +46,11 @@
   width: $height-site-search-query;
 }
 
-.site-search button svg {
+[role="search"] button svg {
   height: 65%;
   width: auto;
 }
 
-.site-search button path {
+[role="search"] button path {
   fill: $color-fg-light;
 }
