Remove unnecessary div from Posts

--- a/src/html/blog/index.mustache
+++ b/src/html/blog/index.mustache
@@ -15,7 +15,7 @@
         {{/isFirstInYear}}
 
         <li>
-          <div><time datetime="{{html5PubDate}}">{{strPubDate}}</time></div>
+          <time datetime="{{html5PubDate}}">{{strPubDate}}</time>
           <a href="{{link}}">{{{title}}}</a>
         </li>
 
