--- a/src/html/index.mustache
+++ b/src/html/index.mustache
@@ -12,7 +12,7 @@
         <ol class="posts">
           {{#articles}}
             <li>
-              <div><time class="js-reldate" datetime="{{html5PubDate}}">{{strPubDate}}</time></div>
+              <time class="js-reldate" datetime="{{html5PubDate}}">{{strPubDate}}</time>
               <a href="{{link}}">{{{title}}}</a>
             </li>
           {{/articles}}
