--- a/src/css/widget/_posts.scss
+++ b/src/css/widget/_posts.scss
@@ -16,11 +16,12 @@
   }
 }
 
-.posts div {
+.posts time {
   color: $color-fg-light;
   font-size: ($ratio-text-posts-info * 1rem);
 
   @media (min-width: $breakpoint-content) {
+    display: block;
     line-height: ($line-height-posts * $ratio-text-posts / $ratio-text-posts-info);
     margin-left: $width-gap-small;
     order: 1;
