Remove verbose class: .section

--- a/src/css/content/_article-footer.scss
+++ b/src/css/content/_article-footer.scss
@@ -1,5 +1,5 @@
-// Section Footer
-.section > footer:first-child {
+// Article Footer
+article > footer:first-child {
   color: $color-fg-light;
   float: left;
   font-size: ($ratio-text-section-footer * 1rem);
@@ -15,6 +15,6 @@
   }
 }
 
-.section > footer:first-child p {
+article > footer:first-child p {
   margin-bottom: 0;
 }
