--- a/src/css/content/_section-subheading.scss
+++ b/src/css/content/_section-subheading.scss
@@ -1,5 +1,6 @@
 // Section Subheading
-.section * h1 {
+section * h1,
+article * h1 {
   font-size: ($ratio-text-large * 1rem);
   margin-bottom: $margin-minimal;
   margin-top: $margin-huge;
