--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -21,9 +21,9 @@
 // Content
 @import "content";
 @import "content/section";
-@import "content/section-footer";
 @import "content/section-heading";
 @import "content/section-subheading";
+@import "content/article-footer";
 
 // Subcontent
 @import "subcontent";
