--- a/src/html/blog/index.mustache
+++ b/src/html/blog/index.mustache
@@ -8,7 +8,7 @@
     <main role="main">
       {{#articles}}
         {{#isFirstInYear}}
-          <section id="on-{{year}}" class="section">
+          <section id="on-{{year}}">
             <h1 class="hang"><time>{{year}}</time></h1>
 
             <ol class="posts">
