--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -13,7 +13,7 @@
 <!-- blosxom date -->
 
 <!-- blosxom story -->
-      <article class="section">
+      <article>
         <footer>
           <p><time class="js-reldate" datetime="$yr-$mo_num-$da<?$fn>T</?>$ti<?$fn>:</?>00+09:00">$yr/$mo_num/$da</time></p>
         </footer>
