--- a/src/html/documents/index.mustache
+++ b/src/html/documents/index.mustache
@@ -6,7 +6,7 @@
     {{> global-header}}
 
     <main role="main">
-      <section id="on-2015" class="section">
+      <section id="on-2015">
         <h1 class="hang"><time>2015</time></h1>
 
         <ol class="posts">
@@ -14,7 +14,7 @@
         </ol>
       </section>
 
-      <section id="on-2014" class="section">
+      <section id="on-2014">
         <h1 class="hang"><time>2014</time></h1>
 
         <ol class="posts">
@@ -25,7 +25,7 @@
         </ol>
       </section>
 
-      <section id="on-2013" class="section">
+      <section id="on-2013">
         <h1 class="hang"><time>2013</time></h1>
 
         <ol class="posts">
@@ -39,7 +39,7 @@
         </ol>
       </section>
 
-      <section id="on-2012" class="section">
+      <section id="on-2012">
         <h1 class="hang"><time>2012</time></h1>
 
         <ol class="posts">
@@ -49,7 +49,7 @@
         </ol>
       </section>
 
-      <section id="on-2011" class="section">
+      <section id="on-2011">
         <h1 class="hang"><time>2011</time></h1>
 
         <ol class="posts">
@@ -61,7 +61,7 @@
         </ol>
       </section>
 
-      <section id="on-2009" class="section">
+      <section id="on-2009">
         <h1 class="hang"><time>2009</time></h1>
 
         <ol class="posts">
@@ -71,7 +71,7 @@
         </ol>
       </section>
 
-      <section id="on-2008" class="section">
+      <section id="on-2008">
         <h1 class="hang"><time>2008</time></h1>
 
         <ol class="posts">
@@ -79,7 +79,7 @@
         </ol>
       </section>
 
-      <section id="upto-2007" class="section">
+      <section id="upto-2007">
         <h1 class="hang">～ <time>2007</time></h1>
 
         <ol class="posts">
