--- a/src/html/index.mustache
+++ b/src/html/index.mustache
@@ -6,7 +6,7 @@
     {{> global-header}}
 
     <main role="main">
-      <section class="section">
+      <section>
         <h1 class="hang">最近書いた記事</h1>
 
         <ol class="posts">
@@ -19,7 +19,7 @@
         </ol>
       </section>
 
-      <section class="section">
+      <section>
         <h1 class="hang">ここ以外だと……</h1>
 
         <p>ちょっとしたことは<a href="https://twitter.com/hail2u_">Twitter</a>、スマホで撮った写真は<a href="https://instagram.com/hail2u_/">Instagram</a>、プログラムとかは<a href="https://github.com/hail2u">GitHub</a>、買ったものやら読んだ本やら気になったウェブページなどは<a href="https://pinboard.in/u:hail2u/">Pinboard</a>でやってます。</p>
