Use debug- prefix for debugging class

--- a/src/css/debug.scss
+++ b/src/css/debug.scss
@@ -10,8 +10,8 @@
 @import "var/ratio";
 @import "var/size";
 
-// Show Column
-.show-column::before {
+// Columns
+.js-debug-columns::before {
   $c: rgb(255, 0, 255);
   $g: rgb(0, 255, 0);
 
@@ -41,8 +41,8 @@
   }
 }
 
-// Show Outline
-.show-outline * {
+// Elements
+.js-debug-elements * {
   $c: rgb(255, 0, 255);
 
   outline: 1px solid $c;
@@ -78,24 +78,24 @@ body::after {
 }
 
 // Fonts
-.font-family-body {
+.debug-font-family-body {
   font-family: $font-stack-system-ui;
 }
 
-.font-family-pre {
+.debug-font-family-pre {
   font-family: $font-stack-monospace;
 }
 
-.italic {
+.debug-italic {
   font-style: italic;
 }
 
-.bold {
+.debug-bold {
   font-weight: 700;
 }
 
 // Colors
-.colors {
+.debug-colors {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -103,7 +103,7 @@ body::after {
   padding-left: 0;
 }
 
-.colors li {
+.debug-colors li {
   display: block;
   height: ($ratio-text-huge * $line-height * 1rem);
   margin-bottom: $margin;
@@ -111,7 +111,7 @@ body::after {
   width: calc((100% / 5) - #{$width-gap-small});
 }
 
-.colors li::before {
+.debug-colors li::before {
   $c: rgb(0, 0, 0);
 
   border: 1px solid $c;
@@ -122,28 +122,28 @@ body::after {
   width: 100%;
 }
 
-.colors li:nth-child(1)::before {
+.debug-colors li:nth-child(1)::before {
   background-color: $color-fg;
 }
 
-.colors li:nth-child(2)::before {
+.debug-colors li:nth-child(2)::before {
   background-color: $color-fg-light;
 }
 
-.colors li:nth-child(3)::before {
+.debug-colors li:nth-child(3)::before {
   background-color: $color-accent;
 }
 
-.colors li:nth-child(4)::before {
+.debug-colors li:nth-child(4)::before {
   background-color: $color-bg;
 }
 
-.colors li:nth-child(5)::before {
+.debug-colors li:nth-child(5)::before {
   background-color: $color-bg-dark;
 }
 
 // Line Length
-.line-length {
+.debug-line-length {
   font-family: Verdana, sans-serif;
   word-break: break-all;
 }
