Thin figcaption border

--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -123,7 +123,7 @@ figure {
 }
 
 figcaption {
-  border-bottom: $width-border solid $color-bg-dark;
+  border-bottom: $width-border-small solid $color-bg-dark;
   color: $color-fg-light;
   display: inline-block;
   font-size: ($ratio-text-small * 1rem);
