Define only Section Heading

--- a/src/css/content/_article-footer.scss
+++ b/src/css/content/_article-footer.scss
@@ -6,7 +6,7 @@ article > footer:first-child {
   width: 100%;
 
   @media (min-width: $breakpoint-full) {
-    line-height: ($line-height-h1 * $ratio-text-h1 / $ratio-text-section-footer);
+    line-height: ($line-height-h1 * $ratio-text-section-heading / $ratio-text-section-footer);
     margin-right: $width-gap;
     position: absolute;
     right: 100%;
