--- a/src/css/content/_section-heading.scss
+++ b/src/css/content/_section-heading.scss
@@ -1,5 +1,6 @@
 // Section Heading
 section > h1,
 article > h1 {
+  font-size: ($ratio-text-section-heading * 1rem);
   margin-top: $margin-top-section-heading;
 }
