--- a/src/css/var/_ratio.scss
+++ b/src/css/var/_ratio.scss
@@ -25,7 +25,6 @@ $ratio-text-root-content: ($ratio-text + (($ratio-text-large - $ratio-text) / 3)
 $ratio-text-root-full: ($ratio-text + (($ratio-text-large - $ratio-text) / 3 * 2));
 $line-height-root: $line-height;
 
-$ratio-text-h1: $ratio-text-huge;
 $line-height-h1: $line-height-tiny;
 
 // Global Header
@@ -33,6 +32,8 @@ $ratio-text-logo: $ratio-text-small;
 $ratio-text-logo-content: $ratio-text;
 
 // Content
+$ratio-text-section-heading: $ratio-text-huge;
+
 $ratio-text-section-footer: $ratio-text;
 
 // Global Footer
