Remove implicit ARIA semantics

--- a/src/css/_content.scss
+++ b/src/css/_content.scss
@@ -1,5 +1,5 @@
 // Content
-[role="main"] {
+body > main {
   margin: (0 - $margin-top-section-heading + $margin-large) auto $margin-gargantuan;
   max-width: $width-content;
   padding-left: $width-gap-small;
