--- a/src/css/_global-footer.scss
+++ b/src/css/_global-footer.scss
@@ -1,5 +1,5 @@
 // Global Footer
-[role="contentinfo"] {
+body > footer {
   font-size: ($ratio-text-global-footer * 1rem);
   margin-left: auto;
   margin-right: auto;
