--- a/src/css/_global-header.scss
+++ b/src/css/_global-header.scss
@@ -1,5 +1,5 @@
 // Global Header
-[role="banner"] {
+body > header {
   display: flex;
   flex-flow: row wrap;
   margin-left: auto;
@@ -19,6 +19,6 @@
   }
 }
 
-[role="banner"] a {
+body > header a {
   text-decoration: none;
 }
