--- a/src/css/global-footer/_footlinks.scss
+++ b/src/css/global-footer/_footlinks.scss
@@ -1,5 +1,5 @@
 // Footlinks
-[role="contentinfo"] p:first-child {
+body > footer p:first-child {
   color: $color-fg-light;
   margin-bottom: $margin-minimal;
 
