--- a/src/css/global-header/_logo.scss
+++ b/src/css/global-header/_logo.scss
@@ -1,5 +1,5 @@
 // Logo
-[role="banner"] h1 {
+body > header h1 {
   flex: auto;
   font-size: ($ratio-text-logo * 1rem);
   line-height: 1;
@@ -18,7 +18,7 @@
   }
 }
 
-[role="banner"] h1 svg {
+body > header h1 svg {
   height: ($ratio-text-logo * $line-height-root * 1rem);
   width: auto;
 
@@ -27,6 +27,6 @@
   }
 }
 
-[role="banner"] h1 path {
+body > header h1 path {
   fill: $color-fg;
 }
