--- a/src/html/documents/index.mustache
+++ b/src/html/documents/index.mustache
@@ -5,7 +5,7 @@
   <body>
     {{> global-header}}
 
-    <main role="main">
+    <main>
       <section id="on-2015">
         <h1 class="hang"><time>2015</time></h1>
 
