--- a/src/html/partial/site-search.mustache
+++ b/src/html/partial/site-search.mustache
@@ -1,4 +1,4 @@
-<aside role="complementary">
+<aside>
   <form action="https://duckduckgo.com/" role="search">
     <input name="sites" type="hidden" value="hail2u.net">
     <input name="q" placeholder="例: Blosxom" required size="32" type="search" aria-label="検索">
