--- a/src/html/blog/index.mustache
+++ b/src/html/blog/index.mustache
@@ -5,7 +5,7 @@
   <body>
     {{> global-header}}
 
-    <main role="main">
+    <main>
       {{#articles}}
         {{#isFirstInYear}}
           <section id="on-{{year}}">
