--- a/src/html/partial/global-footer.mustache
+++ b/src/html/partial/global-footer.mustache
@@ -1,4 +1,4 @@
-<footer role="contentinfo">
+<footer>
   <p><a href="{{license_url}}" rel="license">CC BY</a> • <a href="{{feed_url}}" rel="alternate">RSS</a></p>
 
   <p><a href="https://kyonagashima.com/" rel="author">ながしまきょう</a>が作っています</p>
