--- a/src/html/partial/global-header.mustache
+++ b/src/html/partial/global-header.mustache
@@ -1,4 +1,4 @@
-<header role="banner">
+<header>
   <h1><a href="https://hail2u.net/"><svg height="272" viewBox="0 0 192 272" width="192" role="img" aria-labelledby="logo-title"><title id="logo-title">{{site_title}}</title><path d="M1 56v160h36v-64h64v64h36V56h-36v64H37V56zm154 124v36h36v-36z"/></svg></a></h1>
 
   <nav>
