--- a/src/html/404.mustache
+++ b/src/html/404.mustache
@@ -8,8 +8,8 @@
 
     <style>
       :root {
-        background-color: hsl(36, 48%, 98%);
-        color: hsl(36, 3%, 24%);
+        background-color: hsl(45, 75%, 98%);
+        color: hsl(45, 5%, 10%);
         font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", "Yu Gothic UI", sans-serif;
         height: 100%;
         line-height: 1;
@@ -26,29 +26,29 @@
       }
 
       a {
-        color: hsl(186, 48%, 24%);
+        color: hsl(195, 75%, 25%);
       }
 
-      .title {
+      h1 {
         font-size: 200%;
         font-weight: 400;
         margin: 0 0 2rem;
       }
 
-      .description {
+      p {
         line-height: 1.7;
         margin: 0 0 1rem;
       }
 
-      .site-search {
+      form {
         margin: 0 0 3rem;
         position: relative;
         text-align: left;
       }
 
-      .query {
-        background-color: hsl(36, 84%, 98%);
-        border: 1px solid hsl(36, 12%, 78%);
+      [name="q"] {
+        background-color: white;
+        border: 1px solid hsl(45, 10%, 75%);
         box-sizing: border-box;
         color: inherit;
         font-family: inherit;
@@ -58,11 +58,11 @@
         width: 74%;
       }
 
-      .button {
-        background-color: hsl(186, 48%, 72%);
+      [type="submit"] {
+        background-color: hsl(195, 75%, 25%);
         border: 0;
         box-sizing: border-box;
-        color: hsl(36, 84%, 98%);
+        color: white;
         font-family: inherit;
         font-size: 100%;
         height: 2rem;
@@ -71,28 +71,24 @@
         right: 0;
         width: 25%;
       }
-
-      .home {
-        margin: 0;
-      }
     </style>
   </head>
 
   <body>
     <header>
-      <h1 class="title">{{short_title}}</h1>
+      <h1>{{short_title}}</h1>
     </header>
 
-    <p class="description">あなたがお探しのページは見つかりませんでした。以下のフォームよりこのウェブサイト全体を検索してみてください。</p>
+    <p>{{description}}</p>
 
-    <form class="site-search" action="https://duckduckgo.com/" role="search">
-      <input name="sites" type="hidden" value="hail2u.net">
-      <input class="query" name="q" placeholder="例: Blosxom" size="32" type="search">
-      <input class="button" type="submit" value="Search">
+    <form action="https://duckduckgo.com/" role="search">
+      <input name="sites" type="hidden" value="{{domain}}">
+      <input name="q" placeholder="例: Blosxom" size="32" type="search">
+      <input type="submit" value="Search">
     </form>
 
     <footer>
-      <p class="home">または<a href="/">ホームページ</a>より最近の記事などから探してみてください。</p>
+      <p>または<a href="/">ホームページ</a>より最近の記事などから探してみてください。</p>
     </footer>
   </body>
 </html>
