--- a/src/html/partial/global-header.mustache
+++ b/src/html/partial/global-header.mustache
@@ -1,5 +1,5 @@
 <header>
-  <h1><a href="/"><svg height="272" viewBox="0 0 192 272" width="192" role="img" aria-labelledby="logo-title"><title id="logo-title">{{site_title}}</title><path d="M1 56v160h36v-64h64v64h36V56h-36v64H37V56zm154 124v36h36v-36z"/></svg></a></h1>
+  <h1><a href="/"><svg height="272" viewBox="0 0 204 272" width="204" role="img" aria-labelledby="logo-title"><title id="logo-title">{{site_title}}</title><path d="M1 56v160h36v-65.16h66V216h36V56h-36v63.822H37V56zm181.822 126.553c-5.849 0-10.747 1.682-14.695 5.045-3.875 3.363-5.813 7.676-5.813 12.939 0 5.118 1.901 9.432 5.703 12.941 3.802 3.509 8.553 5.264 14.256 5.264 6.141 0 11.112-1.682 14.914-5.045 3.875-3.436 5.813-7.823 5.813-13.16 0-5.191-1.901-9.467-5.703-12.83-3.729-3.436-8.553-5.154-14.475-5.154z"/></svg></a></h1>
 
   <nav>
     <ul>
