Use address element

--- a/src/css/global-footer/_byline.scss
+++ b/src/css/global-footer/_byline.scss
@@ -1,5 +1,6 @@
 // Byline
-body > footer p:last-child {
+body > footer address {
+  font-style: normal;
   position: relative;
 
   @media (min-width: $breakpoint-content) {
@@ -16,6 +17,6 @@ body > footer p:last-child {
   }
 }
 
-body > footer p:last-child a {
+body > footer address a {
   font-weight: 700;
 }
