Remove bottom white spaces of last child of Article Footer

--- a/src/css/content/_article-footer.scss
+++ b/src/css/content/_article-footer.scss
@@ -15,6 +15,6 @@ article > footer:first-child {
   }
 }
 
-article > footer:first-child p {
+article > footer:first-child :last-child {
   margin-bottom: 0;
 }
