Add directory role to in-site link list

--- a/src/html/blog/index.mustache
+++ b/src/html/blog/index.mustache
@@ -11,7 +11,7 @@
           <section id="on-{{year}}">
             <h1 class="hang"><time>{{year}}</time></h1>
 
-            <ol class="posts">
+            <ol class="posts" role="directory">
         {{/isFirstInYear}}
 
         <li>
