--- a/src/html/index.mustache
+++ b/src/html/index.mustache
@@ -9,7 +9,7 @@
       <section>
         <h1 class="hang">最近書いた記事</h1>
 
-        <ol class="posts">
+        <ol class="posts" role="directory">
           {{#articles}}
             <li>
               <time class="js-reldate" datetime="{{html5PubDate}}">{{strPubDate}}</time>
