--- a/src/html/documents/index.mustache
+++ b/src/html/documents/index.mustache
@@ -9,7 +9,7 @@
       <section id="on-2015">
         <h1 class="hang"><time>2015</time></h1>
 
-        <ol class="posts">
+        <ol class="posts" role="directory">
           <li><a href="/documents/democratic-design.html">民主的なデザイン</a></li>
         </ol>
       </section>
@@ -17,7 +17,7 @@
       <section id="on-2014">
         <h1 class="hang"><time>2014</time></h1>
 
-        <ol class="posts">
+        <ol class="posts" role="directory">
           <li><a href="/documents/markup.html">“マークアップ”するということ ～ HTML5勧告に寄せて ～</a></li>
           <li><a href="/documents/web-typography-best-practices.html">ウェブ・タイポグラフィーのベスト・プラクティス</a></li>
           <li><a href="/documents/bulletproof-icon-fonts.html">安全でアクセシブルなアイコン・フォント</a></li>
@@ -28,7 +28,7 @@
       <section id="on-2013">
         <h1 class="hang"><time>2013</time></h1>
 
-        <ol class="posts">
+        <ol class="posts" role="directory">
           <li><a href="/documents/css-postprocessor-era.html">CSSポストプロセッサー時代の到来</a></li>
           <li><a href="/documents/cutting-down-on-vendor-prefixes.html">ベンダー拡張プリフィックスヲ削減セヨ</a></li>
           <li><a href="/documents/think-of-the-beginners.html">初心者のことを考えよう</a></li>
@@ -39,7 +39,7 @@
         </ol>
       </section>
 
-      <section id="on-2012">
+      <section id="on-2012" role="directory">
         <h1 class="hang"><time>2012</time></h1>
 
         <ol class="posts">
@@ -49,7 +49,7 @@
         </ol>
       </section>
 
-      <section id="on-2011">
+      <section id="on-2011" role="directory">
         <h1 class="hang"><time>2011</time></h1>
 
         <ol class="posts">
@@ -61,7 +61,7 @@
         </ol>
       </section>
 
-      <section id="on-2009">
+      <section id="on-2009" role="directory">
         <h1 class="hang"><time>2009</time></h1>
 
         <ol class="posts">
@@ -71,7 +71,7 @@
         </ol>
       </section>
 
-      <section id="on-2008">
+      <section id="on-2008" role="directory">
         <h1 class="hang"><time>2008</time></h1>
 
         <ol class="posts">
@@ -79,7 +79,7 @@
         </ol>
       </section>
 
-      <section id="upto-2007">
+      <section id="to-2007" role="directory">
         <h1 class="hang">～ <time>2007</time></h1>
 
         <ol class="posts">
