Remove unnecessary variables

--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -44,7 +44,7 @@ hr {
   box-sizing: content-box;
   clear: both;
   color: $color-fg-light;
-  font-size: ($ratio-text-tiny * 1rem);
+  font-size: ($ratio-text-small * 1rem);
   height: 1em;
   line-height: 1;
   margin: $margin-large 0;
@@ -63,7 +63,7 @@ pre {
   font-feature-settings: "zero" 1;
   font-size: ($r * 1rem);
   font-variant-numeric: lining-nums proportional-nums slashed-zero;
-  line-height: ($line-height-root * 2 / 3 / $r);
+  line-height: $line-height-small;
   margin: 0 0 $margin;
   overflow: auto;
 
