--- a/src/css/var/_ratio.scss
+++ b/src/css/var/_ratio.scss
@@ -5,19 +5,13 @@ $ratio: 1.7;
 $ratio-text-primary: 1;
 $ratio-text-secondary: 1.36;
 $ratio-text: $ratio-text-primary;
-$ratio-text-minimal: ($ratio-text-secondary / $ratio / $ratio);
-$ratio-text-tiny: ($ratio-text-primary / $ratio);
 $ratio-text-small: ($ratio-text-secondary / $ratio);
 $ratio-text-large: $ratio-text-secondary;
 $ratio-text-huge: ($ratio-text-primary * $ratio);
-$ratio-text-gargantuan: ($ratio-text-secondary * $ratio);
-$ratio-text-enormous: ($ratio-text-primary * $ratio * $ratio);
-$ratio-text-maximal: ($ratio-text-secondary * $ratio * $ratio);
 
 // Line Height
 $line-height: $ratio;
-$line-height-tiny: ($line-height * 0.8);
-$line-height-small: ($line-height * 0.9);
+$line-height-small: ($line-height * 0.8);
 
 // Core
 $ratio-text-root: $ratio-text;
@@ -25,7 +19,7 @@ $ratio-text-root-content: ($ratio-text + (($ratio-text-large - $ratio-text) / 3)
 $ratio-text-root-full: ($ratio-text + (($ratio-text-large - $ratio-text) / 3 * 2));
 $line-height-root: $line-height;
 
-$line-height-h1: $line-height-tiny;
+$line-height-h1: $line-height-small;
 
 // Global Header
 $ratio-text-logo: $ratio-text-small;
@@ -40,6 +34,6 @@ $ratio-text-article-footer: $ratio-text;
 $ratio-text-global-footer: $ratio-text-small;
 
 // Widget
-$line-height-posts: $line-height-tiny;
+$line-height-posts: $line-height-small;
 $ratio-text-posts: $ratio-text-large;
 $ratio-text-posts-info: $ratio-text-small;
