--- a/src/css/var/_size.scss
+++ b/src/css/var/_size.scss
@@ -6,8 +6,6 @@ $margin-small: ($margin / $ratio);
 $margin-large: ($margin * $ratio);
 $margin-huge: ($margin * $ratio * $ratio);
 $margin-gargantuan: ($margin * $ratio * $ratio * $ratio);
-$margin-enormous: ($margin * $ratio * $ratio * $ratio * $ratio);
-$margin-maximal: ($margin * $ratio * $ratio * $ratio * $ratio * $ratio);
 
 // Indent
 $indent: $margin;
@@ -15,14 +13,10 @@ $indent: $margin;
 // Border
 $width-border: ($margin-minimal / 3);
 $width-border-small: ($width-border / 2);
-$width-border-large: ($width-border * 2);
 
 // Padding
 $padding: $margin-minimal;
-$padding-small: ($padding / 2);
 $padding-large: ($padding * 2);
-$padding-huge: ($padding * 3);
-$padding-gargantuan: ($padding * 4);
 
 // Main Component
 $width-content: 32rem;
@@ -43,7 +37,7 @@ $breakpoint-fhd-up-width: 1921px;
 $breakpoint-fhd-up-height: 1081px;
 
 // Core
-$width-border-blockquote: $width-border-large;
+$width-border-blockquote: $width-border;
 $padding-left-blockquote: ($indent - $width-border-blockquote);
 
 $width-border-table: $width-border-small;
