Reduce margin variation

--- a/src/css/_content.scss
+++ b/src/css/_content.scss
@@ -1,13 +1,9 @@
 // Content
 body > main {
-  margin: (0 - $margin-top-section-heading + $margin-large) auto $margin-gargantuan;
+  margin: (0 - $margin-top-section-heading + $margin-large) auto $margin-top-section-heading;
   max-width: $width-content;
   padding-left: $width-gap-small;
   padding-right: $width-gap-small;
-
-  @media (min-width: $breakpoint-content) {
-    margin-top: (0 - $margin-top-section-heading + $margin-huge);
-  }
 
   @media (min-width: $breakpoint-full) {
     margin-top: 0;
