--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -108,11 +108,11 @@ dl dl {
 
 dt {
   font-weight: 700;
-  margin-bottom: $margin-tiny;
+  margin-bottom: $margin-small;
 }
 
 dd {
-  margin-bottom: $margin-tiny;
+  margin-bottom: $margin-small;
   margin-left: $indent;
 }
 
@@ -126,7 +126,7 @@ figcaption {
   color: $color-fg-light;
   display: inline-block;
   font-size: ($ratio-text-small * 1rem);
-  margin-top: $margin-tiny;
+  margin-top: $margin-small;
 
   @media (min-width: $breakpoint-full) {
     bottom: 0;
