--- a/src/css/content/_section-subheading.scss
+++ b/src/css/content/_section-subheading.scss
@@ -2,6 +2,6 @@
 section * h1,
 article * h1 {
   font-size: ($ratio-text-large * 1rem);
-  margin-bottom: $margin-minimal;
-  margin-top: $margin-huge;
+  margin-bottom: $margin-small;
+  margin-top: $margin-large;
 }
