--- a/src/css/global-footer/_footlinks.scss
+++ b/src/css/global-footer/_footlinks.scss
@@ -1,7 +1,7 @@
 // Footlinks
 body > footer p {
   color: $color-fg-light;
-  margin-bottom: $margin-minimal;
+  margin-bottom: $margin-small;
 
   @media (min-width: $breakpoint-content) {
     margin-bottom: 0;
