--- a/src/css/var/_size.scss
+++ b/src/css/var/_size.scss
@@ -1,21 +1,18 @@
 // Margin
 $margin: ($ratio * 1rem);
-$margin-minimal: ($margin / $ratio / $ratio / $ratio);
-$margin-tiny: ($margin / $ratio / $ratio);
-$margin-small: ($margin / $ratio);
+$margin-small: ($margin / $ratio / $ratio);
 $margin-large: ($margin * $ratio);
-$margin-huge: ($margin * $ratio * $ratio);
-$margin-gargantuan: ($margin * $ratio * $ratio * $ratio);
+$margin-huge: ($margin * $ratio * $ratio * $ratio);
 
 // Indent
 $indent: $margin;
 
 // Border
-$width-border: ($margin-minimal / 3);
+$width-border: ($margin-small / 5);
 $width-border-small: ($width-border / 2);
 
 // Padding
-$padding: $margin-minimal;
+$padding: ($margin-small / 2);
 $padding-large: ($padding * 2);
 
 // Main Component
@@ -43,7 +40,7 @@ $padding-left-blockquote: ($indent - $width-border-blockquote);
 $width-border-table: $width-border-small;
 
 // Content
-$margin-top-section-heading: $margin-gargantuan;
+$margin-top-section-heading: $margin-huge;
 
 // Subcontent
 $width-border-site-search-query: $width-border-small;
