--- a/src/css/var/_size.scss
+++ b/src/css/var/_size.scss
@@ -8,12 +8,12 @@ $margin-huge: ($margin * $ratio * $ratio * $ratio);
 $indent: $margin;
 
 // Border
-$width-border: ($margin-small / 5);
-$width-border-small: ($width-border / 2);
+$width-border: ($margin-small / $ratio / $ratio / $ratio);
+$width-border-small: ($width-border / $ratio);
 
 // Padding
-$padding: ($margin-small / 2);
-$padding-large: ($padding * 2);
+$padding: ($margin-small / $ratio);
+$padding-large: ($padding * $ratio);
 
 // Main Component
 $width-content: 32rem;
