Define content width with characters

--- a/src/css/var/_size.scss
+++ b/src/css/var/_size.scss
@@ -16,7 +16,7 @@ $padding: ($margin-small / $ratio);
 $padding-large: ($padding * $ratio);
 
 // Main Component
-$width-content: 32rem;
+$width-content: (32 * 1rem);
 $width-gap: ($width-content / $ratio / $ratio / $ratio / $ratio / $ratio / $ratio);
 $width-gap-small: ($width-gap / $ratio);
 $width-content-outer: ($width-gap-small + $width-content + $width-gap-small);
