Define secondary text ratio from $ratio

--- a/src/css/var/_ratio.scss
+++ b/src/css/var/_ratio.scss
@@ -3,7 +3,7 @@ $ratio: 1.7;
 
 // Text Size
 $ratio-text-primary: 1;
-$ratio-text-secondary: 1.36;
+$ratio-text-secondary: (($ratio + 1) / 2);
 $ratio-text: $ratio-text-primary;
 $ratio-text-small: ($ratio-text-secondary / $ratio);
 $ratio-text-large: $ratio-text-secondary;
